# telegram-notifier

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yaml
src/: main.rs
