[package]
name = "telegram-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros", "rustls", "ctrlc_handler",  "auto-send"], default-features = false }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
axum = "0.6.18"
serde = { version = "1.0.164", features = ["derive"] }
axum-auth = "0.4.0"
